# mylonite

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Dockerfile.release  LICENSE  README.md  manifest.json  package.json
.github/workflows/: ci.yml  release.yml
crates/protocol/: Cargo.toml
crates/protocol/src/: lib.rs
dev/: config.toml
plugin/: esbuild.config.mjs  manifest.json  package.json  styles.css  tsconfig.json  vitest.config.mts
plugin/src/: api.test.ts  api.ts  confirm-modal.ts  conflict-policy.test.ts  conflict-policy.ts  crypto.test.ts  crypto.ts  local-event-classifier.test.ts  local-event-classifier.ts  main.ts  pairing.test.ts  pairing.ts  protocol.test.ts  protocol.ts  qr.test.ts  qr.ts  secrets.ts  settings.ts  snapshot-service.test.ts  snapshot-service.ts  state-index.ts  sync-codec.test.ts  sync-codec.ts  sync-engine.test.ts  sync-engine.ts  sync-state.ts  sync-types.ts  ui-yield.ts  vault-adapter.test.ts  vault-adapter.ts  yjs-markdown.test.ts  yjs-markdown.ts
plugin/test/: obsidian-shim.ts
scripts/: copy-plugin-main.mjs
server/: Cargo.toml
server/src/: cli.rs  config.rs  main.rs  storage.rs
server/src/app/: auth.rs  mod.rs  routes.rs  tls.rs  validation.rs  ws.rs
