[workspace]
members = ["crates/protocol", "server"]
resolver = "3"

[workspace.package]
version = "0.1.12"
edition = "2024"
rust-version = "1.85"

[workspace.lints.rust]
unsafe_code = "warn"

[workspace.lints.clippy]
all = "warn"
pedantic = "warn"

[profile.release]
opt-level = "z"
lto = "fat"
codegen-units = 1
panic = "abort"
strip = "symbols"
