[package]
name = "mylonite"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license = "MIT"
description = "Self-hosted encrypted Obsidian sync server"

[lints]
workspace = true

[dependencies]
anyhow = "1"
axum = { version = "0.8", default-features = false, features = ["http1", "json", "query", "tokio", "ws"] }
axum-server = { version = "0.7", default-features = false, features = ["tls-rustls-no-provider"] }
clap = { version = "4", default-features = false, features = ["derive", "error-context", "help", "std", "usage"] }
dirs = "6"
ed25519-dalek = "2"
futures-util = { version = "0.3", default-features = false, features = ["std"] }
mylonite-protocol = { path = "../crates/protocol" }
rand = "0.9"
rcgen = "0.13"
redb = "2"
rustls = { version = "0.23", default-features = false, features = ["ring", "std"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha2 = "0.10"
tokio = { version = "1", features = ["macros", "net", "rt-multi-thread", "signal", "sync", "time"] }
toml = "0.8"
tower-http = { version = "0.6", features = ["cors"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
